# lotrs-anon

./: LICENSE  Makefile  README.md  lotrs-facct-sampler.md
estimator/: LoTRS-Estimate-Output-N100T50.txt  Makefile  README.md  lotrs_estimate.py  lotrs_finder.py  lotrs_param_checks.py
estimator/ASIS_sec_estimate/: ASIS_MSIS_security.py  ASIS_est.sage  ASIS_model_BKZ.py  README.md
estimator/kd_estimates/: Dilithium.py  Kyber.py  Kyber_failure.py  MLWE_security.py  MSIS_security.py  my_LWE_estimate.sage  my_SIS_estimate.sage  output_for_Dilithium.py
lotrs-py/: api.md  aux_ntt.py  codec.py  lotrs.py  params.py  requirements.txt  ring.py  sample.py  test_codec.py  test_e2e.py  test_lotrs.py  test_params.py  test_ring.py  test_sample.py  test_wtilde.py  usage.md  vectors.json  vectors.py
lotrs-rs/: Cargo.toml  README.md
lotrs-rs/bench-out/: data-prev.csv  data.csv  grid-d128.md  grid-d128.stderr  summary.md
lotrs-rs/examples/: bench.rs
lotrs-rs/scripts/: gen_cdt.py  gen_sampler_kat.py  plot_bench.py
lotrs-rs/src/: aux_ntt.rs  codec.rs  lib.rs  lotrs.rs  params.rs  ring.rs  sample.rs
lotrs-rs/tests/: interop.rs  sampler_kat.json  sampler_kat.rs
